# assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  agent.py  llm.py  main.py  memory.py  models.py  prompt.py  pyproject.toml
.github/workflows/: release.yml  test.yml  update-formula.yml
Formula/: pday.rb
config/: default.yaml
config/prompts/: system.txt
docs/: PRD.md  RELEASE_CHECKLIST_V1.md  configuration.md  example-goals.md  feature-ideas.md  plan-v1.md  user-profiles.md
profiles/: default.json
scripts/: validate-release.sh
src/application/: config.py  container.py  session_orchestrator.py
src/application/use_cases/: __init__.py  checkin.py  create_plan.py  export_all.py  export_plan.py  export_summary.py  import_tasks.py  quick_start.py  resume_session.py  revise_plan.py  template_apply.py  template_delete.py  template_list.py  template_save.py  template_show.py  view_aggregate_stats.py  view_stats.py
src/cli/: main.py  profile_setup.py  setup_wizard.py
src/cli/commands/: plan.py  session.py
src/domain/: exceptions.py
src/domain/models/: __init__.py  conversation.py  metrics.py  planning.py  profile.py  session.py  state.py  template.py
src/domain/protocols/: exporter.py  llm.py  storage.py
src/domain/services/: __init__.py  agent_service.py  export_service.py  metrics_service.py  planning_service.py  state_machine.py  task_import_service.py  time_tracking_service.py
src/infrastructure/export/: __init__.py  markdown.py  summary.py
src/infrastructure/io/: formatters.py  input_handler.py
src/infrastructure/llm/: openai_provider.py  retry.py  types.py
src/infrastructure/storage/: cache.py  json_storage.py  sqlite_storage.py
tests/: __init__.py  conftest.py  test_agent.py  test_llm.py  test_memory.py  test_models.py
tests/fixtures/: factories.py  mocks.py
tests/integration/: test_planning_workflow.py
tests/unit/application/: test_checkin.py  test_container.py  test_create_plan.py  test_session_orchestrator.py  test_use_cases.py
tests/unit/cli/: test_cli_commands.py
tests/unit/domain/: test_agent_service.py  test_export_service.py  test_metrics_service.py  test_models.py  test_planning_service.py  test_state_machine.py  test_task_import_service.py  test_template.py  test_time_tracking_service.py
tests/unit/infrastructure/: test_cache.py  test_export.py  test_json_storage.py  test_openai_provider.py  test_retry.py  test_storage.py
