[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "planmyday"
version = "0.1.1"
description = "AI-powered daily planning assistant - Plan your day with conversational AI"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Ibtisam", email = "hello@ibtisam.dev" }
]
license = { text = "MIT" }
keywords = [
    "planning",
    "daily-planner",
    "ai",
    "productivity",
    "cli",
    "openai",
    "time-management",
    "schedule",
    "task-management",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "openai>=1.15.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "aiofiles>=23.2.0",
    "aiocache>=0.12.2",
]

[project.urls]
Homepage = "https://github.com/ibtisamdev/planmyday"
Repository = "https://github.com/ibtisamdev/planmyday"
Documentation = "https://github.com/ibtisamdev/planmyday#readme"
"Bug Tracker" = "https://github.com/ibtisamdev/planmyday/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

database = [
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
]

export = [
    "jinja2>=3.1.0",
    "markdown>=3.5.0",
]

[project.scripts]
planmyday = "src.cli.main:cli"
pday = "src.cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "aiocache.*",
    "src.cli.profile_setup",
    "src.infrastructure.io.formatters",
    "src.infrastructure.llm.openai_provider",
    "src.infrastructure.llm.retry",
]
ignore_missing_imports = true
ignore_errors = true

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    ".venv/*",
    # CLI/presentation layer - interactive code with Rich console output
    "src/cli/main.py",
    "src/cli/profile_setup.py",
    "src/infrastructure/io/formatters.py",
    "src/infrastructure/io/input_handler.py",
    # Use cases - contain interactive console code (Rich prompts, tables)
    "src/application/use_cases/quick_start.py",
    "src/application/use_cases/import_tasks.py",
    "src/application/use_cases/resume_session.py",
    "src/application/use_cases/revise_plan.py",
    "src/application/use_cases/template_apply.py",
    "src/application/use_cases/template_delete.py",
    "src/application/use_cases/template_list.py",
    "src/application/use_cases/template_save.py",
    "src/application/use_cases/template_show.py",
    "src/application/use_cases/view_aggregate_stats.py",
    "src/application/use_cases/view_stats.py",
    "src/application/use_cases/export_all.py",
    "src/application/use_cases/export_plan.py",
    "src/application/use_cases/export_summary.py",
    # Other excluded
    "src/infrastructure/storage/sqlite_storage.py",
    "src/infrastructure/llm/types.py",
    "src/domain/protocols/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "types-pyyaml>=6.0.0",
    "types-aiofiles>=24.1.0",
    "pre-commit>=4.0.0",
    "twine>=6.2.0",
    "build>=1.4.0",
]
